# Shared compiler flags consumed by native builds.
# NOTE: WASM builds read flags from src/platforms/wasm/compiler/build_flags.toml
# via ci/wasm_flags.py. If adding flags here that should also apply to WASM,
# add them to build_flags.toml too.
shared_no_exception_flags = ['-fno-exceptions', '-fno-rtti']

# Shared preprocessor defines
shared_defines = ['-DFASTLED_USE_PROGMEM=0']
